<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gen3_servo_control</name>
  <version>0.1.0</version>
  <description>MoveIt Servo based control for Kinova Gen3 7DOF with JointState goal interface</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>moveit_servo</depend>
  <depend>kortex_bringup</depend>
  <depend>kinova_gen3_7dof_robotiq_2f_85_moveit_config</depend>
  <depend>controller_manager</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
